SERVER-16161 Log failed heartbeat requests at default verbosity